[gd_scene load_steps=26 format=3 uid="uid://b4fifkgg1yf2s"]

[ext_resource type="Material" uid="uid://bfxskerll3w8a" path="res://materials/ground_material.tres" id="1_dmfcq"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_pk6lc"]
[ext_resource type="PackedScene" uid="uid://bhfvbet03vgwh" path="res://scenes/enviroment/directional_light_3d.tscn" id="2_hfe06"]
[ext_resource type="PackedScene" uid="uid://cjgno8iscv3xj" path="res://scenes/water/level_4_river.glb" id="4_b3ntr"]
[ext_resource type="Material" uid="uid://bco8ocu4lskyd" path="res://materials/water_material.tres" id="5_hjuka"]
[ext_resource type="PackedScene" uid="uid://dprjpd46fus7o" path="res://scenes/enviroment/river_particles.tscn" id="6_afdxt"]
[ext_resource type="PackedScene" uid="uid://dsg4nkj1stvgh" path="res://scenes/ground/level_4_grass.glb" id="7_ln4j1"]
[ext_resource type="PackedScene" uid="uid://d5uutdryr1pt" path="res://scenes/interactable/delivery_box.glb" id="7_sc2as"]
[ext_resource type="Material" uid="uid://dtxelo6px2be6" path="res://materials/grass_material.tres" id="8_lxg6k"]
[ext_resource type="StyleBox" uid="uid://c7ndjb0l72532" path="res://styles/panel.tres" id="10_m6bpp"]
[ext_resource type="LabelSettings" uid="uid://c6hej6rcbn6gn" path="res://styles/main_title.tres" id="10_nv271"]
[ext_resource type="LabelSettings" uid="uid://bcm2xcjp1m5s4" path="res://styles/game_font.tres" id="11_q1l3v"]
[ext_resource type="LabelSettings" uid="uid://3fll27v50xmj" path="res://styles/game_font_small.tres" id="12_dug22"]
[ext_resource type="Theme" uid="uid://qh6cjjnvr4a1" path="res://styles/button_theming.tres" id="12_txd7n"]
[ext_resource type="AudioStream" uid="uid://bmod33pxpa5dj" path="res://assets/sfx/ui_beep.wav" id="13_bg0tw"]
[ext_resource type="AudioStream" uid="uid://cbo8nn0q5l3r" path="res://assets/sfx/ui_notice.wav" id="16_wb5xn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_batu1"]
ground_bottom_color = Color(0.607843, 0.741176, 0.505882, 1)

[sub_resource type="Sky" id="Sky_fxvtn"]
sky_material = SubResource("ProceduralSkyMaterial_batu1")

[sub_resource type="Environment" id="Environment_1nikr"]
background_mode = 1
background_color = Color(0.6768, 0.86104, 0.94, 1)
background_canvas_max_layer = 1
sky = SubResource("Sky_fxvtn")
ambient_light_source = 3
ambient_light_color = Color(0.811765, 0.870588, 0.839216, 1)
ambient_light_sky_contribution = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_2j2sl"]
material = ExtResource("1_dmfcq")
size = Vector3(40, 1, 40)

[sub_resource type="Curve3D" id="Curve3D_55uo7"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -40, -1.5, 9.502, 0, 0, 0, 0, 0, 0, 4.17514, -1.5, 9.30389, 0, 0, 0, 0, 0, 0, 4.32807, -1.5, -1.78338, 0, 0, 0, 0, 0, 0, -1.91696, -1.5, -1.62919, 0, 0, 0, 0, 0, 0, -2.20952, -1.5, -19.3279),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxMesh" id="BoxMesh_lid7o"]
size = Vector3(40, 1, 40)

[sub_resource type="Animation" id="Animation_12ava"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_uivqu"]
resource_name = "start_game_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.0472, 0, 0.523599)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqclw"]
_data = {
"RESET": SubResource("Animation_12ava"),
"start_game_animation": SubResource("Animation_uivqu")
}

[node name="Main Menu" type="Node"]
script = ExtResource("1_pk6lc")

[node name="DirectionalLight3D" parent="." instance=ExtResource("2_hfe06")]
transform = Transform3D(0.942805, 0.0118487, -0.333135, 0.333346, -0.0335118, 0.942209, 0, -0.999368, -0.0355448, 0, 36.586, -59.3348)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1nikr")

[node name="Ground" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_2j2sl")

[node name="River" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.125, 1.5, -4.564)

[node name="level_4_river" parent="River" instance=ExtResource("4_b3ntr")]

[node name="Cube_003" parent="River/level_4_river" index="0"]
transform = Transform3D(0, 0, 2, 0, 1, 0, -12.5, 0, 0, -0.325626, 0, 0.189952)
material_override = ExtResource("5_hjuka")

[node name="Path3D" type="Path3D" parent="River"]
curve = SubResource("Curve3D_55uo7")

[node name="PathFollow3D" type="PathFollow3D" parent="River/Path3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40, -1.5, 9.502)
rotation_mode = 0
cubic_interp = false
tilt_enabled = false

[node name="delivery_box" parent="River/Path3D/PathFollow3D" instance=ExtResource("7_sc2as")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)

[node name="River Particles" parent="River" instance=ExtResource("6_afdxt")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.0752, -0.237305, 9.13327)

[node name="River Particles" parent="River/River Particles" instance=ExtResource("6_afdxt")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 10.1345, -0.237305, 13.1711)

[node name="River Particles2" parent="River" instance=ExtResource("6_afdxt")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.35971, -0.76001, 10.0274)

[node name="Grass" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.848, 1.75, -2.983)

[node name="level_4_grass" parent="Grass" instance=ExtResource("7_ln4j1")]

[node name="Grass" parent="Grass/level_4_grass" index="0"]
material_override = ExtResource("8_lxg6k")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.74616, 11.3151)

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(0.878466, 0.244035, -0.410786, 0.0210138, 0.83917, 0.543463, 0.477343, -0.486046, 0.732054, -10.3523, 2.05102, -4.97752)
fov = 45.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.038, 2.5, -39.703)
mesh = SubResource("BoxMesh_lid7o")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("8_lxg6k")

[node name="River2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 44.7593, 1.5, -16.0592)

[node name="level_4_river" parent="River2" instance=ExtResource("4_b3ntr")]

[node name="Cube_003" parent="River2/level_4_river" index="0"]
transform = Transform3D(0, 0, 2, 0, 1, 0, -12.5, 0, 0, -0.326, 0, 0.19)
material_override = ExtResource("5_hjuka")

[node name="Grass2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 42.931, 1.75, -15.2697)

[node name="level_4_grass" parent="Grass2" instance=ExtResource("7_ln4j1")]

[node name="Grass" parent="Grass2/level_4_grass" index="0"]
transform = Transform3D(20, 0, 0, 0, 1.25, 0, 0, 0, 20, 0, 0, -0.118904)
material_override = ExtResource("8_lxg6k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Disclaimer" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = -117.0
offset_right = 271.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("10_m6bpp")

[node name="Disclaimer Title" type="Label" parent="CanvasLayer/Disclaimer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.0
offset_top = 10.0
offset_right = 76.0
offset_bottom = 52.0
grow_horizontal = 2
text = "Disclaimer"
label_settings = ExtResource("11_q1l3v")

[node name="Disclaimer Text" type="Label" parent="CanvasLayer/Disclaimer"]
layout_mode = 0
offset_left = 17.0
offset_top = 68.0
offset_right = 423.0
offset_bottom = 135.0
text = "If you get stuck in a level,
press R to restart from the initial state."
label_settings = ExtResource("12_dug22")

[node name="Continue Button" type="Button" parent="CanvasLayer/Disclaimer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.5
offset_top = -75.0
offset_right = 51.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("12_txd7n")
text = "Continue"

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -284.0
offset_right = 149.5
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("10_m6bpp")

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -31.0
offset_right = 97.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
text = "Derivery"
label_settings = ExtResource("10_nv271")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -15.5
offset_right = 46.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("12_txd7n")
text = "Start game"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_bg0tw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xqclw")
}

[node name="NoticeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_wb5xn")
volume_db = 2.0

[connection signal="pressed" from="CanvasLayer/Disclaimer/Continue Button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]

[editable path="River/level_4_river"]
[editable path="Grass/level_4_grass"]
[editable path="River2/level_4_river"]
[editable path="Grass2/level_4_grass"]
